# cmake-test

./: CMakeLists.txt  License.txt  README.md  cmake-test.cbp  run-demo.sh
doc/: demo.txt
src/: CMakeLists.txt  config.h  config.h.in  main.cc
src/mathFunc/: CMakeLists.txt  mathFunc.cc  mathFunc.h
src/printLib/: CMakeLists.txt  print.cc  print.h
