SET(LIBPRINT_SRC print.cc)
ADD_LIBRARY(print SHARED ${LIBPRINT_SRC})
ADD_LIBRARY(print_static STATIC ${LIBPRINT_SRC})
SET_TARGET_PROPERTIES(print_static PROPERTIES OUTPUT_NAME "print")
SET_TARGET_PROPERTIES(print PROPERTIES VERSIOON 1.2 SOVERSION 1)

install (TARGETS print print_static
	 LIBRARY DESTINATION lib
	 ARCHIVE DESTINATION lib)

INSTALL(FILES print.h DESTINATION include/print)
